# ros2_wormhole_navigation

./: .gitignore  README.md  run_multi_map_system.sh  run_with_direct_maps.sh  setup_git_commands.sh
maps/: room1.pgm  room1.yaml  room2.pgm  room2.yaml  room3.pgm  room3.yaml
src/: README.md
src/multi_map_nav/: CMakeLists.txt  package.xml
src/multi_map_nav/action/: MultiMapNavigate.action
src/multi_map_nav/config/: multi_map_nav.rviz
src/multi_map_nav/include/multi_map_nav/: vda5050_types.hpp  wormhole_db.hpp
src/multi_map_nav/launch/: load_maps.launch.py  multi_map_full.launch.py  multi_map_nav.launch.py  multi_map_viz.launch.py  send_goal.launch.py
src/multi_map_nav/maps/: room1.pgm  room1.yaml  room2.yaml  room3.yaml
src/multi_map_nav/scripts/: direct_map_publisher.py  generate_maps.py  setup_wormholes.py  verify_map_publishing.py
src/multi_map_nav/src/: map_switcher_node.cpp  map_visualizer.cpp  navigation_client.cpp  navigation_server.cpp  robot_state_publisher_node.cpp  tf_publisher_node.cpp  vda5050_client.cpp  wormhole_db.cpp
src/multi_map_nav/worlds/: multi_room.world
